@@ -3,8 +3,6 @@
 # Wrapper script to run Ubiquity as root using the appropriate privilege
 # escalation method for the frontend.
 
-from __future__ import print_function
-
 import sys
 import os
 import subprocess
