@@ -18,8 +18,6 @@
 # You should have received a copy of the GNU General Public License
 # along with Ubiquity.  If not, see <http://www.gnu.org/licenses/>.
 
-from __future__ import print_function
-
 import fnmatch
 import importlib
 import os
