@@ -1,5 +1,3 @@
-from __future__ import print_function
-
 import sys
 
 from PyQt4.QtCore import Qt
